force-app/main/default/objects/Opportunity/fields/fxDeliveryStartWeekday__c.field-meta.xml
<CustomField>
    <fullName>fxDeliveryStartWeekday__c</fullName>
    <formula>IF(WEEKDAY(Delivery_Start_Date__c)=1, &apos;SUN&apos;,
IF(WEEKDAY(Delivery_Start_Date__c)=2, &apos;MON&apos;,
IF(WEEKDAY(Delivery_Start_Date__c)=3, &apos;TUE&apos;,
IF(WEEKDAY(Delivery_Start_Date__c)=4, &apos;WED&apos;,
IF(WEEKDAY(Delivery_Start_Date__c)=5, &apos;THU&apos;,
IF(WEEKDAY(Delivery_Start_Date__c)=6, &apos;FRI&apos;,
IF(WEEKDAY(Delivery_Start_Date__c)=7, &apos;SAT&apos;,&apos;&apos;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Start Weekday</label>
    <type>Text</type>
</CustomField>