force-app/main/default/objects/Opportunity/fields/Gross_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_Total_Price__c</fullName>
    <description>Gross Total Price (excl. Tax)</description>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Total Price (excl. Tax)</inlineHelpText>
    <label>Gross Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>