force-app/main/default/objects/Opportunity/fields/Heatsoak__c.field-meta.xml
<CustomField>
    <fullName>Heatsoak__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LATER/PostPilot consider moving to builfding</description>
    <inlineHelpText>Indication whether heat soak is required</inlineHelpText>
    <label>Heatsoak</label>
    <type>Checkbox</type>
</CustomField>