force-app/main/default/objects/Opportunity/fields/Included_Product_Models__c.field-meta.xml
<CustomField>
    <fullName>Included_Product_Models__c</fullName>
    <label>Included Product Models</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Models</valueSetName>
    </valueSet>
</CustomField>