force-app/main/default/objects/Opportunity/fields/Included_Products__c.field-meta.xml
<CustomField>
    <fullName>Included_Products__c</fullName>
    <description>A List of Products included in the Offer</description>
    <inlineHelpText>A List of Products included in the Offer</inlineHelpText>
    <label>Included Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Models</valueSetName>
    </valueSet>
</CustomField>