force-app/main/default/objects/Opportunity/fields/Installation_Address__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address__c</fullName>
    <label>Installation Address</label>
    <type>Address</type>
</CustomField>