force-app/main/default/objects/Opportunity/fields/Installation_Comments_for_Customer__c.field-meta.xml
<CustomField>
    <fullName>Installation_Comments_for_Customer__c</fullName>
    <description>To be filled by the Installation manager ( e.g: Please clear the balcony before the glazing installation)</description>
    <label>Installation Comments for Customer OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>