force-app/main/default/objects/Opportunity/fields/Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Date__c</fullName>
    <description>Calculated Earliest Installation Date</description>
    <inlineHelpText>Estimated Earliest Installation
The earliest Possible Date when Goods are available on Site for Installation</inlineHelpText>
    <label>Earliest Installation Date</label>
    <type>Date</type>
</CustomField>