force-app/main/default/objects/Opportunity/fields/Installation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_End_Date__c</fullName>
    <description>Planned Date when Installation is completed</description>
    <inlineHelpText>Planned Date when Installation is completed</inlineHelpText>
    <label>Installation End Date</label>
    <type>Date</type>
</CustomField>