force-app/main/default/objects/Opportunity/fields/Installation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Start_Date__c</fullName>
    <description>Planned Date for starting Installation</description>
    <inlineHelpText>Planned Date for starting Installation</inlineHelpText>
    <label>Installation Start Date</label>
    <type>Date</type>
</CustomField>