force-app/main/default/objects/Opportunity/fields/Installation_Time__c.field-meta.xml
<CustomField>
    <fullName>Installation_Time__c</fullName>
    <inlineHelpText>The Time to Install in Hours</inlineHelpText>
    <label>Installation Time OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>