force-app/main/default/objects/Opportunity/fields/Installation_Time_Calc__c.field-meta.xml
<CustomField>
    <fullName>Installation_Time_Calc__c</fullName>
    <formula>IF(ISBLANK( Confirmed_installation_time__c ) , &quot;Est : &quot; &amp; TEXT(Preliminary_installation_time__c ) ,  TEXT(Confirmed_installation_time__c))</formula>
    <label>Installation Time Calc OLD</label>
    <type>Text</type>
</CustomField>