force-app/main/default/objects/Opportunity/fields/InstallationAddress__c.field-meta.xml
<CustomField>
    <fullName>InstallationAddress__c</fullName>
    <label>Installation Address</label>
    <type>Address</type>
</CustomField>