force-app/main/default/objects/Opportunity/fields/InstallationManagerUser__c.field-meta.xml
<CustomField>
    <fullName>InstallationManagerUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>