force-app/main/default/objects/Opportunity/fields/InstallAtType__c.field-meta.xml
<CustomField>
    <fullName>InstallAtType__c</fullName>
    <label>Install At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
                <default>true</default>
                <label>Building</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>