force-app/main/default/objects/Opportunity/fields/Invoice_type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_type__c</fullName>
    <label>Invoice type OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>