force-app/main/default/objects/Opportunity/fields/Invoicing_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Address__c</fullName>
    <label>Invoicing Address OLD</label>
    <type>Address</type>
</CustomField>