force-app/main/default/objects/Opportunity/fields/Invoicing_Email_Adddress__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Email_Adddress__c</fullName>
    <label>Invoicing Email Adddress OLD</label>
    <type>Email</type>
</CustomField>