force-app/main/default/objects/Opportunity/fields/isChargeable__c.field-meta.xml
<CustomField>
    <fullName>isChargeable__c</fullName>
    <description>Indicates if Opportunity is chargeable</description>
    <formula>if (isReclamation__c &amp;&amp;  
      (Main_Project_Number__c =  Sub_Project_Number__c 
        || Sub_Project_Code__c = 1),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isChargeable</label>
    <type>Checkbox</type>
</CustomField>