force-app/main/default/objects/Opportunity/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate whether Opportunity can be updated</description>
    <label>IsLocked</label>
    <type>Checkbox</type>
</CustomField>