force-app/main/default/objects/Opportunity/fields/isReclamation__c.field-meta.xml
<CustomField>
    <fullName>isReclamation__c</fullName>
    <description>Indicates if Opportunity is a reclamation based on Opportunity Type</description>
    <formula>IF (TEXT(Type) = &apos;Claim&apos; ||TEXT(Type) = &apos;Reclamation&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if Opportunity is a reclamation</inlineHelpText>
    <label>isReclamation</label>
    <type>Checkbox</type>
</CustomField>