force-app/main/default/objects/Opportunity/fields/Last_Date_To_Order__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_To_Order__c</fullName>
    <inlineHelpText>Last Possible Date To Order Products and Meet Agreed TimeLine</inlineHelpText>
    <label>Last Date To Order</label>
    <type>Date</type>
</CustomField>