force-app/main/default/objects/Opportunity/fields/Lead_Time_With_Buffers__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_With_Buffers__c</fullName>
    <description>Lead Time in Days</description>
    <inlineHelpText>Total Lead Time in Days</inlineHelpText>
    <label>Lead Time With Buffers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>