force-app/main/default/objects/Opportunity/fields/Main_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Main_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to mention whether main contractor or sub contractor</description>
    <label>Main Contractor OLD</label>
    <type>Checkbox</type>
</CustomField>