force-app/main/default/objects/Opportunity/fields/Main_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Main_Project_Number__c</fullName>
    <description>Shows the Main(tori) Project Number</description>
    <inlineHelpText>the Project Number</inlineHelpText>
    <label>Main Project Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>