force-app/main/default/objects/Opportunity/fields/Max_Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Max_Production_Time__c</fullName>
    <description>DO NOT USE</description>
    <inlineHelpText>Indication of the Production Time in Calendar Days</inlineHelpText>
    <label>Maximum Production Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>