force-app/main/default/objects/Opportunity/fields/Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Payment__c</fullName>
    <label>Method of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Plan__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>REF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>