force-app/main/default/objects/Opportunity/fields/Moved_to_Contract_Signed_date_time__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Contract_Signed_date_time__c</fullName>
    <description>This field logs the timestap opportunity has been moved to contract signed stage</description>
    <label>Moved to Contract Signed date/time</label>
    <type>DateTime</type>
</CustomField>