force-app/main/default/objects/Opportunity/fields/Moved_to_Quoting_date_time__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Quoting_date_time__c</fullName>
    <description>This field stores when opportunity has been moved to quoting</description>
    <label>Moved to Quoting date/time OLD</label>
    <type>DateTime</type>
</CustomField>