force-app/main/default/objects/Opportunity/fields/Net_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Price__c</fullName>
    <description>Net Total Price (incl. Tax)</description>
    <formula>Gross_Total_Price__c +  Tax_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Total Price (incl. Tax) OLD</inlineHelpText>
    <label>Net Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>