force-app/main/default/objects/Opportunity/fields/OfferNumber__c.field-meta.xml
<CustomField>
    <fullName>OfferNumber__c</fullName>
    <description>Reference to the Offer Number in Salestori</description>
    <externalId>true</externalId>
    <label>OfferNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>