force-app/main/default/objects/Opportunity/fields/Office_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Office_Attribute__c</fullName>
    <formula>Owner.Office_Attribute__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Attribute</label>
    <type>Text</type>
</CustomField>