force-app/main/default/objects/Opportunity/fields/OfficeCode__c.field-meta.xml
<CustomField>
    <fullName>OfficeCode__c</fullName>
    <label>Office Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Offices</valueSetName>
    </valueSet>
</CustomField>