force-app/main/default/objects/Opportunity/fields/On_a_Hill_or_Slope__c.field-meta.xml
<CustomField>
    <fullName>On_a_Hill_or_Slope__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indication whether the Building is Located on a Hill or Slope</inlineHelpText>
    <label>On a Hill or Slope</label>
    <type>Checkbox</type>
</CustomField>