force-app/main/default/objects/Opportunity/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>