force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Auto number to have a unique 8 digit number that links Sales Objects. Used as sales reference</description>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Opportunity Number OLD</label>
    <type>AutoNumber</type>
</CustomField>