force-app/main/default/objects/Opportunity/fields/OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumber__c</fullName>
    <description>Auto number to have a unique 8 digit number that links Sales Objects. Used as sales reference</description>
    <displayFormat>8-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>