force-app/main/default/objects/Opportunity/fields/Order_Comments_for_Customer__c.field-meta.xml
<CustomField>
    <fullName>Order_Comments_for_Customer__c</fullName>
    <description>To be filled by the Sales person while agreeing on something with the customer during customer visit (e.g. The price does not include xxx)</description>
    <label>Order Comments for Customer OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>