force-app/main/default/objects/Opportunity/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>This field is used to identify the opportunity in salesforce for the FSL</description>
    <externalId>true</externalId>
    <label>Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>