force-app/main/default/objects/Opportunity/fields/Order_type__c.field-meta.xml
<CustomField>
    <fullName>Order_type__c</fullName>
    <description>Claim or normal order</description>
    <inlineHelpText>Select if the order is a reclamation or a normal order</inlineHelpText>
    <label>Order type OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Reclamation</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>