force-app/main/default/objects/Opportunity/fields/Order_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Order_Type_New__c</fullName>
    <description>Select if the order is a reclamation or a normal order</description>
    <label>Order Type New OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Order_Types</valueSetName>
    </valueSet>
</CustomField>