force-app/main/default/objects/Opportunity/fields/Organization_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Organization_Attribute__c</fullName>
    <description>Level 1 Classification based on Organization</description>
    <formula>Owner.Organization_Attribute__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Level 1 Classification based on Organization</inlineHelpText>
    <label>Organization Attribute OLD</label>
    <type>Text</type>
</CustomField>