force-app/main/default/objects/Opportunity/fields/Other_Reason_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is marked when the Other Reason has been resolved.</description>
    <inlineHelpText>Please mark this field when the Other Reason for Preliminary Contract has been resolved.</inlineHelpText>
    <label>Other Reason Resolved OLD</label>
    <type>Checkbox</type>
</CustomField>