force-app/main/default/objects/Opportunity/fields/Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Owner_Country__c</fullName>
    <formula>Owner.Country</formula>
    <label>Owner Country OLD</label>
    <type>Text</type>
</CustomField>