force-app/main/default/objects/Opportunity/fields/Owner_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Owner_Country_Code__c</fullName>
    <formula>TEXT(Owner.CountryCode)</formula>
    <label>Owner Country Code OLD</label>
    <type>Text</type>
</CustomField>