force-app/main/default/objects/Opportunity/fields/Owner_Office__c.field-meta.xml
<CustomField>
    <fullName>Owner_Office__c</fullName>
    <formula>Owner.Office_Attribute__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Office OLD</label>
    <type>Text</type>
</CustomField>