force-app/main/default/objects/Opportunity/fields/Owner_Organization__c.field-meta.xml
<CustomField>
    <fullName>Owner_Organization__c</fullName>
    <formula>TEXT(Owner.Organization__c)</formula>
    <label>Owner Organization OLD</label>
    <type>Text</type>
</CustomField>