force-app/main/default/objects/Opportunity/fields/Owner_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profit_Center__c</fullName>
    <description>Level 4 Classification based on Profit Center of the Owner</description>
    <formula>Owner.Profit_Center_Attribute__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Level 4 Classification based on Profit Center of the Owner</inlineHelpText>
    <label>Owner Profit Center OLD</label>
    <type>Text</type>
</CustomField>