force-app/main/default/objects/Opportunity/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <description>Parent project from Project</description>
    <formula>Project_Number__r.Parent_Project__r.Project_Number__c</formula>
    <label>Parent Project</label>
    <type>Text</type>
</CustomField>