force-app/main/default/objects/Opportunity/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <label>Payment Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25% Advance + 75% Financing</fullName>
            </value>
            <value>
                <fullName>50% Advance + 50% Financing</fullName>
            </value>
            <value>
                <fullName>Aftersales 100% Final invoice</fullName>
            </value>
            <value>
                <fullName>Consumer 50/50</fullName>
            </value>
            <value>
                <fullName>Consumer Financing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>