force-app/main/default/objects/Opportunity/fields/PDFButler_DocConfig_Displayed__c.field-meta.xml
<CustomField>
    <fullName>PDFButler_DocConfig_Displayed__c</fullName>
    <description>Field to determine what document must be shown on contract (PDF DocConfig value)</description>
    <formula>IF(ISPICKVAL(StageName, &quot;Quoting&quot;) &amp;&amp;  Preliminary_Contract_Needed__c = True,
        &quot;Preliminary Contract&quot;,
        IF(ISPICKVAL(StageName, &quot;Quoting&quot;) &amp;&amp; Preliminary_Contract_Needed__c = False,
            &quot;Contract&quot;,
            &quot;No document defined&quot;
        )
    )</formula>
    <inlineHelpText>Field to determine what document must be shown on contract (PDF DocConfig value)</inlineHelpText>
    <label>PDFButler DocConfig Displayed</label>
    <type>Text</type>
</CustomField>