force-app/main/default/objects/Opportunity/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Contact Phone number might be required by Deliveries Supplier</description>
    <label>Phone OLD</label>
    <type>Phone</type>
</CustomField>