force-app/main/default/objects/Opportunity/fields/Planned_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Installation_Date__c</fullName>
    <description>Date when Installation is Planned</description>
    <formula>DATEVALUE(Preliminary_installation_time__c)</formula>
    <inlineHelpText>Date when Installation is Planned</inlineHelpText>
    <label>Planned Installation Date</label>
    <type>Date</type>
</CustomField>