force-app/main/default/objects/Opportunity/fields/Preliminary_Contract__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field indicated the related preliminary contract (if any)</description>
    <inlineHelpText>Please relate a related preliminary contract (if any)</inlineHelpText>
    <label>Preliminary Contract OLD</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>