force-app/main/default/objects/Opportunity/fields/Preliminary_Contract_Needed__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Contract_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked if preliminary contract is needed</description>
    <inlineHelpText>Please indicate if for any reason preliminary contract is needed</inlineHelpText>
    <label>Preliminary Contract Needed OLD</label>
    <type>Checkbox</type>
</CustomField>