force-app/main/default/objects/Opportunity/fields/Preliminary_Contract_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Contract_Reason_Details__c</fullName>
    <description>This field contains more information why preliminary contract was chosen</description>
    <inlineHelpText>Please provide more information here</inlineHelpText>
    <label>Preliminary Contract Reason Details OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>