force-app/main/default/objects/Opportunity/fields/Preliminary_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Contract_Signed__c</fullName>
    <description>This field returns true when associated contract is signed</description>
    <formula>ISPICKVAL(Contract.Status, &quot;Preliminary Contract Signed&quot;) || ISPICKVAL(Contract.Status,&quot;Activated&quot;) &amp;&amp;  ISPICKVAL(Contract.Contract_type__c, &quot;Preliminary Contract&quot;)</formula>
    <label>Preliminary Contract Signed OLD</label>
    <type>Checkbox</type>
</CustomField>