force-app/main/default/objects/Opportunity/fields/Preliminary_installation_time__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_installation_time__c</fullName>
    <description>To plan for installation, a preliminary installation date &amp; time will show in this field. 
This data is captured from the Installation Scheduling component. 
This custom field is part of the B2C lead to order process.</description>
    <inlineHelpText>The Preliminary installation date and time.</inlineHelpText>
    <label>Preliminary installation time</label>
    <type>DateTime</type>
</CustomField>