force-app/main/default/objects/Opportunity/fields/Production_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_End_Date__c</fullName>
    <description>Shows the Date when the Finished Good is Produced</description>
    <inlineHelpText>Production end date (=Earliest load date, Production start date + production time + extra days)</inlineHelpText>
    <label>Production End Date OLD</label>
    <type>Date</type>
</CustomField>