force-app/main/default/objects/Opportunity/fields/Production_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Start_Date__c</fullName>
    <description>The Date when Production is estimated, planned or confirmed to Start</description>
    <inlineHelpText>First Available Date when Production can Start</inlineHelpText>
    <label>Production Start Date</label>
    <type>Date</type>
</CustomField>