force-app/main/default/objects/Opportunity/fields/Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Production_Time__c</fullName>
    <inlineHelpText>Indication of the Production Time in Calendar Days</inlineHelpText>
    <label>Production Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>