force-app/main/default/objects/Opportunity/fields/Profit_Center_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center_Attribute__c</fullName>
    <formula>Profit_Center_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Center Attribute OLD</label>
    <type>Text</type>
</CustomField>