force-app/main/default/objects/Opportunity/fields/Profit_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center_Code__c</fullName>
    <description>Retrieve the Profit Center Code</description>
    <formula>LEFT(Owner_Profit_Center__c,FIND(Organization_Attribute__c,Owner_Profit_Center__c,1)-2)</formula>
    <label>Profit Center Code</label>
    <type>Text</type>
</CustomField>