force-app/main/default/objects/Opportunity/fields/Profit_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center_Name__c</fullName>
    <formula>MID(Owner_Profit_Center__c,FIND(Organization_Attribute__c,Owner_Profit_Center__c,1)+4,100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Center Name</label>
    <type>Text</type>
</CustomField>